2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newusers.c: Make sure the passwd, group, shadow, and
	gshadow files are unlocked on exit. Add function fail_exit(). Use
	fail_exit() instead of exit().

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/gpasswd.c: Make sure the group and gshadow files are
	unlocked on exit. Add function fail_exit(). Use fail_exit()
	instead of exit().

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupdel.c: Do not rewrite the group and gshadow file
	in case of error.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupdel.c: Do not log that the group was deleted if an
	error occurred.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupdel.c: Do not raise an error if the group does
	not exist in the gshadow file.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* etc/login.defs: Document MAX_MEMBERS_PER_GROUP.

2008-03-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Add missing end of line in message.
	* src/newgrp.c: Add audit events for the authentication
	(AUDIT_GRP_AUTH). Thansk to Peter Vrabec.

2008-03-05  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/faillog.c: Only reset the entries of existing users
	with faillog -r (not all numeric IDs starting from 0). Thanks to
	Peter Vrabec.

2008-03-05  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwunconv.c: Fix typo. One "can't open" message is a "can't
	lock".

2008-02-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: When a password is moved to the gshadow file, use
	"x" instead of "x" to indicate that the password is shadowed
	(consistency with grpconv).

2008-02-26  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Fix failures when the gshadow file is not present. Thanks