@@ -35,6 +35,7 @@ shadow-4.1.0 -> shadow-4.1.1						UNRELEASED
 - groupdel
   * Do not fail if the group does not exist in the gshadow file.
   * Do not rewrite the group or gshadow file in case of error.
+  * Make sure the group and gshadow files are unlocked on exit.
 - groupmems
   * Fix buffer overflow when adding an user to a group. Thanks to Peter Vrabec.
 - groupmod
