@@ -1,5 +1,13 @@
 2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* NEWS, src/groupdel.c: Make sure the group, and gshadow files are
+	unlocked on exit. Add function fail_exit(). Use fail_exit()
+	instead of exit().
+	* src/groupdel.c: Fail immediately instead of increasing errors.
+	Better handling of error cases, like locked group or gshadow file.
+
+2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* NEWS, src/newusers.c: Make sure the passwd, group, shadow, and
 	gshadow files are unlocked on exit. Add function fail_exit(). Use
 	fail_exit() instead of exit().
